@@ -488,6 +488,8 @@ class KickstartHandlers:
         op = KSOptionParser(lineno=self.lineno)
         op.add_option("--hsync", dest="hsync")
         op.add_option("--monitor", dest="monitor")
+        op.add_option("--noprobe", dest="probe", action="store_false",
+                      default=True)
         op.add_option("--vsync", dest="vsync")
 
         (opts, extra) = op.parse_args(args=args)
@@ -723,15 +725,14 @@ class KickstartHandlers:
         op.add_option("--defaultdesktop", dest="defaultdesktop")
         op.add_option("--depth", dest="depth", action="store", type="int",
                       nargs=1)
-        op.add_option("--hsync", dest="hsync")
-        op.add_option("--monitor", dest="monitor")
-        op.add_option("--noprobe", dest="probe", action="store_false",
-                      default=True)
+        op.add_option("--hsync", deprecated=1)
+        op.add_option("--monitor", deprecated=1)
+        op.add_option("--noprobe", deprecated=1)
         op.add_option("--resolution", dest="resolution")
         op.add_option("--startxonboot", dest="startX", action="store_true",
                       default=False)
         op.add_option("--videoram", dest="videoRam")
-        op.add_option("--vsync", dest="vsync")
+        op.add_option("--vsync", deprecated=1)
 
         (opts, extra) = op.parse_args(args=args)
         if extra:
